New feature, only display the vm hosts specified the location
